-apple-system-font-monospaced-numbers doesn't work on iOS https://bugs.webkit.org/show_bug.cgi?id=144478 <rdar://problem/20544940>

Reviewed by Brent Fulgham.

Source/WebCore:

Make sure to start from the system font descriptor when
asking for a monospaced numeric alternate.

Test: platform/ios-simulator/fast/text/system-monospaced-numbers.html

* platform/graphics/ios/FontCacheIOS.mm:
(WebCore::createCTFontWithFamilyNameAndWeight):

LayoutTests:

A test that draws two lines of different numbers and checks
they are the same width.

* platform/ios-simulator/fast/text/system-monospaced-numbers-expected.txt: Added.
* platform/ios-simulator/fast/text/system-monospaced-numbers.html: Added.

Canonical link: https://commits.webkit.org/162491@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183653 268f45cc-cd09-0410-ab3c-d52691b4dbfc